--- a/physician_section.html
+++ b/physician_section.html
@@ -417,54 +417,90 @@ document.getElementById(id).readOnly = true;
 
             $('#physician_section_eye_fac').add('#physician_section_eye_int').change(function(){                
                 $('#physician_section_eye_sum').val($('#physician_section_eye_fac').val() * $('#physician_section_eye_int').val()*0.5);
+                eye_fac = isNaN(parseInt($('#physician_section_eye_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_eye_fac').find(":selected").text())
+                eye_int = isNaN(parseInt($('#physician_section_eye_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_eye_int').find(":selected").text())
+                x = eye_fac + eye_int
+                add_view("physician_section_eye_sum",x)
                 fm_total();
             });     
 
 
             $('#physician_section_mouth_fac').add('#physician_section_mouth_int').change(function(){                
                 $('#physician_section_mouth_sum').val($('#physician_section_mouth_fac').val() * $('#physician_section_mouth_int').val()*0.5);
+                mouth_fac = isNaN(parseInt($('#physician_section_mouth_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_mouth_fac').find(":selected").text())
+                mouth_int = isNaN(parseInt($('#physician_section_mouth_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_mouth_int').find(":selected").text())
+                x = mouth_fac + mouth_int
+                add_view("physician_section_mouth_sum",x)
                 fm_total();
             });    
 
 
             $('#physician_section_eat_fac').add('#physician_section_eat_int').change(function(){                
                 $('#physician_section_eat_sum').val($('#physician_section_eat_fac').val() * $('#physician_section_eat_int').val());
+                eat_fac = isNaN(parseInt($('#physician_section_eat_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_eat_fac').find(":selected").text())
+                eat_int = isNaN(parseInt($('#physician_section_eat_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_eat_int').find(":selected").text())
+                x = eat_fac + eat_int
+                add_view("physician_section_eat_sum",x)
                 fm_total();
             });    
 
 
             $('#physician_section_neck_fac').add('#physician_section_neck_int').change(function(){                
                 $('#physician_section_neck_sum').val($('#physician_section_neck_fac').val() * $('#physician_section_neck_int').val()*0.5);
+                neck_fac = isNaN(parseInt($('#physician_section_neck_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_neck_fac').find(":selected").text())
+                neck_int = isNaN(parseInt($('#physician_section_neck_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_neck_int').find(":selected").text())
+                x = neck_fac + neck_int
+                add_view("physician_section_neck_sum",x)
                 fm_total();
             });    
 
 
             $('#physician_section_rhand_fac').add('#physician_section_rhand_int').change(function(){                
                 $('#physician_section_rhand_sum').val($('#physician_section_rhand_fac').val() * $('#physician_section_rhand_int').val());
+                rhand_fac = isNaN(parseInt($('#physician_section_rhand_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_rhand_fac').find(":selected").text())
+                rhand_int = isNaN(parseInt($('#physician_section_rhand_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_rhand_int').find(":selected").text())
+                x = rhand_fac + rhand_int
+                add_view("physician_section_rhand_sum",x)
                 fm_total();
             });    
 
 
             $('#physician_section_lhand_fac').add('#physician_section_lhand_int').change(function(){
                 $('#physician_section_lhand_sum').val($('#physician_section_lhand_fac').val() * $('#physician_section_lhand_int').val());
+                lhand_fac = isNaN(parseInt($('#physician_section_lhand_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_lhand_fac').find(":selected").text())
+                lhand_int = isNaN(parseInt($('#physician_section_lhand_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_lhand_int').find(":selected").text())
+                x = lhand_fac + lhand_int
+                add_view("physician_section_lhand_sum",x)
                 fm_total();
             });                
 
             
             $('#physician_section_body_fac').add('#physician_section_body_int').change(function(){                
                 $('#physician_section_body_sum').val($('#physician_section_body_fac').val() * $('#physician_section_body_int').val());
+                body_fac = isNaN(parseInt($('#physician_section_body_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_body_fac').find(":selected").text())
+                body_int = isNaN(parseInt($('#physician_section_body_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_body_int').find(":selected").text())
+                x = body_fac + body_int
+                add_view("physician_section_body_sum",x)
                 fm_total();
             });                
 
 
             $('#physician_section_rleg_fac').add('#physician_section_rleg_int').change(function(){                
                 $('#physician_section_rleg_sum').val($('#physician_section_rleg_fac').val() * $('#physician_section_rleg_int').val());
+                rleg_fac = isNaN(parseInt($('#physician_section_rleg_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_rleg_fac').find(":selected").text())
+                rleg_int = isNaN(parseInt($('#physician_section_rleg_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_rleg_int').find(":selected").text())
+                x = rleg_fac + rleg_int
+                add_view("physician_section_rleg_sum",x)
                 fm_total();
             });                
 
 
             $('#physician_section_lleg_fac').add('#physician_section_lleg_int').change(function(){                
                 $('#physician_section_lleg_sum').val($('#physician_section_lleg_fac').val() * $('#physician_section_lleg_int').val());
+                lleg_fac = isNaN(parseInt($('#physician_section_lleg_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_lleg_fac').find(":selected").text())
+                lleg_int = isNaN(parseInt($('#physician_section_lleg_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_lleg_int').find(":selected").text())
+                x = lleg_fac + lleg_int
+                add_view("physician_section_lleg_sum",x)
                 fm_total();
             }); 
 
@@ -481,7 +517,9 @@ document.getElementById(id).readOnly = true;
                 rleg_sum = isNaN(parseInt($('#physician_section_rleg_sum').val())) ? 0 : parseInt($('#physician_section_rleg_sum').val())
                 lleg_sum = isNaN(parseInt($('#physician_section_lleg_sum').val())) ? 0 : parseInt($('#physician_section_lleg_sum').val())                
                 $('#physician_section_fm_total').val($('#physician_section_eye_sum').val() + $('#physician_section_mouth_sum').val() + $('#physician_section_eat_sum').val() + $('#physician_section_neck_sum').val()+ $('#physician_section_rhand_sum').val()+ $('#physician_section_lhand_sum').val()+$('#physician_section_body_sum').val()+$('#physician_section_rleg_sum').val()+$('#physician_section_lleg_sum').val());
-                $('#physician_section_fm_total').val(eye_sum+mouth_sum+eat_sum+neck_sum+rhand_sum+lhand_sum+body_sum+rleg_sum+lleg_sum)
+                // $('#physician_section_fm_total').val(eye_sum+mouth_sum+eat_sum+neck_sum+rhand_sum+lhand_sum+body_sum+rleg_sum+lleg_sum)
+                x = eye_sum+mouth_sum+eat_sum+neck_sum+rhand_sum+lhand_sum+body_sum+rleg_sum+lleg_sum
+                add_view("physician_section_fm_total",x)
             }
 
 
