Now all fields are working correctly

--- a/physician_section.html
+++ b/physician_section.html
@@ -430,7 +430,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_mouth_sum').val($('#physician_section_mouth_fac').val() * $('#physician_section_mouth_int').val()*0.5);
                 mouth_fac = isNaN(parseInt($('#physician_section_mouth_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_mouth_fac').find(":selected").text())
                 mouth_int = isNaN(parseInt($('#physician_section_mouth_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_mouth_int').find(":selected").text())
-                x = mouth_fac * mouth_int * 0.5
+                x = $('#physician_section_mouth_sum').val()
+                // x = mouth_fac * mouth_int * 0.5
                 add_view("physician_section_mouth_sum",x)
                 fm_total();
             });    
@@ -440,7 +441,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_eat_sum').val($('#physician_section_eat_fac').val() * $('#physician_section_eat_int').val());
                 eat_fac = isNaN(parseInt($('#physician_section_eat_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_eat_fac').find(":selected").text())
                 eat_int = isNaN(parseInt($('#physician_section_eat_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_eat_int').find(":selected").text())
-                x = eat_fac * eat_int
+                x = $('#physician_section_eat_sum').val()
+                // x = eat_fac * eat_int
                 add_view("physician_section_eat_sum",x)
                 fm_total();
             });    
@@ -450,7 +452,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_neck_sum').val($('#physician_section_neck_fac').val() * $('#physician_section_neck_int').val()*0.5);
                 neck_fac = isNaN(parseInt($('#physician_section_neck_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_neck_fac').find(":selected").text())
                 neck_int = isNaN(parseInt($('#physician_section_neck_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_neck_int').find(":selected").text())
-                x = neck_fac * neck_int * 0.5
+                x = $('#physician_section_neck_sum').val()
+                // x = neck_fac * neck_int * 0.5
                 add_view("physician_section_neck_sum",x)
                 fm_total();
             });    
@@ -460,7 +463,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_rhand_sum').val($('#physician_section_rhand_fac').val() * $('#physician_section_rhand_int').val());
                 rhand_fac = isNaN(parseInt($('#physician_section_rhand_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_rhand_fac').find(":selected").text())
                 rhand_int = isNaN(parseInt($('#physician_section_rhand_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_rhand_int').find(":selected").text())
-                x = rhand_fac * rhand_int
+                x = $('#physician_section_rhand_sum').val()
+                // x = rhand_fac * rhand_int
                 add_view("physician_section_rhand_sum",x)
                 fm_total();
             });    
@@ -470,7 +474,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_lhand_sum').val($('#physician_section_lhand_fac').val() * $('#physician_section_lhand_int').val());
                 lhand_fac = isNaN(parseInt($('#physician_section_lhand_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_lhand_fac').find(":selected").text())
                 lhand_int = isNaN(parseInt($('#physician_section_lhand_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_lhand_int').find(":selected").text())
-                x = lhand_fac * lhand_int
+                x = $('#physician_section_lhand_sum').val()
+                // x = lhand_fac * lhand_int
                 add_view("physician_section_lhand_sum",x)
                 fm_total();
             });                
@@ -480,7 +485,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_body_sum').val($('#physician_section_body_fac').val() * $('#physician_section_body_int').val());
                 body_fac = isNaN(parseInt($('#physician_section_body_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_body_fac').find(":selected").text())
                 body_int = isNaN(parseInt($('#physician_section_body_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_body_int').find(":selected").text())
-                x = body_fac * body_int
+                x = $('#physician_section_body_sum').val()
+                // x = body_fac * body_int
                 add_view("physician_section_body_sum",x)
                 fm_total();
             });                
@@ -490,7 +496,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_rleg_sum').val($('#physician_section_rleg_fac').val() * $('#physician_section_rleg_int').val());
                 rleg_fac = isNaN(parseInt($('#physician_section_rleg_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_rleg_fac').find(":selected").text())
                 rleg_int = isNaN(parseInt($('#physician_section_rleg_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_rleg_int').find(":selected").text())
-                x = rleg_fac * rleg_int
+                x = $('#physician_section_rleg_sum').val()
+                // x = rleg_fac * rleg_int
                 add_view("physician_section_rleg_sum",x)
                 fm_total();
             });                
@@ -500,7 +507,8 @@ document.getElementById(id).readOnly = true;
                 $('#physician_section_lleg_sum').val($('#physician_section_lleg_fac').val() * $('#physician_section_lleg_int').val());
                 lleg_fac = isNaN(parseInt($('#physician_section_lleg_fac').find(":selected").text())) ? 0 : parseInt($('#physician_section_lleg_fac').find(":selected").text())
                 lleg_int = isNaN(parseInt($('#physician_section_lleg_int').find(":selected").text())) ? 0 : parseInt($('#physician_section_lleg_int').find(":selected").text())
-                x = lleg_fac * lleg_int
+                x = $('#physician_section_lleg_sum').val()
+                // x = lleg_fac * lleg_int
                 add_view("physician_section_lleg_sum",x)
                 fm_total();
             }); 
